Migration to containerized application.