@@ -8,57 +8,45 @@ Requires Rust version >= 1.63
 
 Requires browser with support to dynamic ES6 modules (tested with Chrome versions >= 64)
 
-## First Step
+## Containerized application
 
 Open terminal and clone this repository with `git clone https://github.com/alexsandrostefenon/rufs-nfe-rust`.
 
-To download the required dependencies and build, then
+Edit "rufs-nfe-rust/.env" with your personal data.
 
-`cd rufs-nfe-rust && 
-wasm-pack build --target web --dev &&
-cargo build -r
-` 
-
-## Run Ecosystem
-
-## PostgreSql setup
-
-create database :
-
-sudo su postgres;
-
-or
-
-su -c "su postgres";
-
-export PGDATABASE=postgres;
-psql -c "CREATE USER development WITH CREATEDB LOGIN PASSWORD '123456'";
-psql -c 'CREATE DATABASE rufs_nfe_development WITH OWNER development';
-exit;
-
-Note, database "rufs_nfe_development" is only for testing purposes.
-
-### Run Ecosystem
-
-#Only to clean already existent configuration :
-
-
-#Only to clean already existent testing data :
+### Setup build and testing environment
 `
-clear; \
-rm *openapi-rufs_nfe-rust.json; \
-PGHOST=localhost PGPORT=5432 PGUSER=development PGPASSWORD=123456 psql rufs_nfe_development -c "DROP DATABASE IF EXISTS rufs_nfe;" &&
-PGHOST=localhost PGPORT=5432 PGUSER=development PGPASSWORD=123456 psql rufs_nfe_development -c "CREATE DATABASE rufs_nfe;"
+cargo install cargo-version-upgrade;
+cd rufs-nfe-rust &&
+podman-compose up -d standalone_firefox &&
+podman-compose up -d postgres &&
+export $(cat .env | xargs) &&
+PGHOST=localhost &&
+psql postgresql://postgres:$POSTGRES_PASSWORD@$PGHOST:$PGPORT/template1 -c "CREATE USER $PGUSER WITH CREATEDB LOGIN PASSWORD '$PGPASSWORD'" &&
+psql postgresql://postgres:$POSTGRES_PASSWORD@$PGHOST:$PGPORT/template1 -c "CREATE DATABASE rufs_nfe WITH OWNER $PGUSER" &&
+podman build -t selenium-side-runner -f selenium-side-runner.Dockerfile &&
+podman build -t rust-runtime -f runtime.Dockerfile &&
+podman build -v $PWD/../rufs-base-rust:$PWD/../rufs-base-rust -v $PWD:$PWD -t rust-build --build-arg working_dir=$PWD -f build.Dockerfile &&
+echo "Setup of containerized environment is done !"
 `
-#Execute rufs-proxy to load and start microservices :
 
-#PGHOST=localhost PGPORT=5432 PGUSER=development PGPASSWORD=123456 PGDATABASE=rufs_nfe nodejs ./rufs-base-es6/proxy.js --add-modules ../rufs-nfe-es6/NfeMicroService.js;
-PGHOST=localhost PGPORT=5432 PGUSER=development PGPASSWORD=123456 PGDATABASE=rufs_nfe ./target/release/rufs-nfe-rust;
+### Run
+
+Build container image and run service :
+`
+./build.sh &&
+podman-compose up -d rufs-crud-rust
+`
+
+### Tests :
+`
+./tests/tests.sh
+`
 
 ## Web application
 
 In EcmaScript2017 compliance browser open url
 
-`http://localhost:8080`
+`http://localhost:8081`
 
 For custom service configuration or user edition, use user 'admin' with password 'admin'.
